--- a/theme/global/base.less
+++ b/theme/global/base.less
@@ -17,6 +17,9 @@ body {
 .card-item .card-desc .price .effective-price {
   font-size: 0.875rem;
 }
+.base-page-container{
+  max-width:1440px;
+}
 
 .login-modal .tingle-modal-box {
   background: #f5f5f5;
